--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e0d4b2ce-4596-4037-8d54-ce05e1a7748b"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
